@@ -1,3 +1,8 @@
+2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-theme-manager.c: (meta_theme_selection_changed):
+	Plug a few leaks. Bug #376949.
+
 2006-12-03  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-installer.c: (theme_properties_free),
